--- a/style.css
+++ b/style.css
@@ -55,14 +55,17 @@ li {
   width: 70%;
 }
 
-h1 {
+*h {
   color: aqua;
   font-family: 'Amatic SC', cursive;
-  font-size: 72px;
-  line-height: 60px;
+  font-size: 25px;
+  line-height: 30px;
   padding: 20px 10px;
   text-align: center;
 }
+*p {
+  font-family: serif;
+  color: black;
 
 .btn {
   background-color: orange;
